// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Last name render a disabled field 1`] = `
<div id="lastNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="lastName"
     data-validate="required"
>
  <label for="lastName"
         class="o-forms__label"
  >
    Last name
  </label>
  <input type="text"
         id="lastName"
         name="lastName"
         placeholder="Enter your last name"
         autocomplete="family-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-lastname"
         aria-required="true"
         required
         disabled
         value
  >
  <div class="o-forms__errortext">
    Please enter your last name
  </div>
</div>
`;

exports[`Last name render a disabled field 2`] = `
<div id="lastNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="lastName"
     data-validate="required"
>
  <label for="lastName"
         class="o-forms__label"
  >
    Last name
  </label>
  <input type="text"
         id="lastName"
         name="lastName"
         placeholder="Enter your last name"
         autocomplete="family-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-lastname"
         aria-required="true"
         required
         disabled
         value
  >
  <div class="o-forms__errortext">
    Please enter your last name
  </div>
</div>
`;

exports[`Last name render a field with default settings 1`] = `
<div id="lastNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="lastName"
     data-validate="required"
>
  <label for="lastName"
         class="o-forms__label"
  >
    Last name
  </label>
  <input type="text"
         id="lastName"
         name="lastName"
         placeholder="Enter your last name"
         autocomplete="family-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-lastname"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    Please enter your last name
  </div>
</div>
`;

exports[`Last name render a field with default settings 2`] = `
<div id="lastNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="lastName"
     data-validate="required"
>
  <label for="lastName"
         class="o-forms__label"
  >
    Last name
  </label>
  <input type="text"
         id="lastName"
         name="lastName"
         placeholder="Enter your last name"
         autocomplete="family-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-lastname"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    Please enter your last name
  </div>
</div>
`;

exports[`Last name render a field with error 1`] = `
<div id="lastNameField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-ui-item="form-field"
     data-ui-item-name="lastName"
     data-validate="required"
>
  <label for="lastName"
         class="o-forms__label"
  >
    Last name
  </label>
  <input type="text"
         id="lastName"
         name="lastName"
         placeholder="Enter your last name"
         autocomplete="family-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-lastname"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    Please enter your last name
  </div>
</div>
`;

exports[`Last name render a field with error 2`] = `
<div id="lastNameField"
     class="o-forms o-forms--wide ncf__field js-field o-forms--error"
     data-ui-item="form-field"
     data-ui-item-name="lastName"
     data-validate="required"
>
  <label for="lastName"
         class="o-forms__label"
  >
    Last name
  </label>
  <input type="text"
         id="lastName"
         name="lastName"
         placeholder="Enter your last name"
         autocomplete="family-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-lastname"
         aria-required="true"
         required
         value
  >
  <div class="o-forms__errortext">
    Please enter your last name
  </div>
</div>
`;

exports[`Last name render a field with value 1`] = `
<div id="lastNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="lastName"
     data-validate="required"
>
  <label for="lastName"
         class="o-forms__label"
  >
    Last name
  </label>
  <input type="text"
         id="lastName"
         name="lastName"
         placeholder="Enter your last name"
         autocomplete="family-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-lastname"
         aria-required="true"
         required
         value="some value"
  >
  <div class="o-forms__errortext">
    Please enter your last name
  </div>
</div>
`;

exports[`Last name render a field with value 2`] = `
<div id="lastNameField"
     class="o-forms o-forms--wide ncf__field js-field"
     data-ui-item="form-field"
     data-ui-item-name="lastName"
     data-validate="required"
>
  <label for="lastName"
         class="o-forms__label"
  >
    Last name
  </label>
  <input type="text"
         id="lastName"
         name="lastName"
         placeholder="Enter your last name"
         autocomplete="family-name"
         class="o-forms__text js-field__input js-item__value"
         data-trackable="field-lastname"
         aria-required="true"
         required
         value="some value"
  >
  <div class="o-forms__errortext">
    Please enter your last name
  </div>
</div>
`;
